// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField applies theme and style props 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityRole="none"
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "backgroundColor": "purple",
      },
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "400",
          "marginHorizontal": 4,
          "marginVertical": 3,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "color": "blue",
        },
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(0, 0%, 0%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "padding": 8,
        "width": "100%",
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          Object {
            "color": "orange",
          },
        ]
      }
      testID="textInput"
    />
  </View>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "400",
          "marginHorizontal": 4,
          "marginVertical": 3,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    Error!
  </Text>
</View>
`;

exports[`TextField doesn't render the errorMessage if error prop is false 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "400",
          "marginHorizontal": 4,
          "marginVertical": 3,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(0, 0%, 0%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "padding": 8,
        "width": "100%",
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField doesn't render the errorMessage if errorMessage prop is undefined 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "400",
          "marginHorizontal": 4,
          "marginVertical": 3,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(0, 0%, 0%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "padding": 8,
        "width": "100%",
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "400",
          "marginHorizontal": 4,
          "marginVertical": 3,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(0, 0%, 0%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "padding": 8,
        "width": "100%",
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected as password field 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "400",
          "marginHorizontal": 4,
          "marginVertical": 3,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(0, 0%, 0%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "padding": 8,
        "width": "100%",
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      secureTextEntry={true}
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected when disabled 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "400",
          "marginHorizontal": 4,
          "marginVertical": 3,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(0, 0%, 0%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "opacity": 0.6,
        "padding": 8,
        "width": "100%",
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={false}
      placeholder="Placeholder"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected with error message 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "400",
          "marginHorizontal": 4,
          "marginVertical": 3,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(0, 0%, 0%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "lineHeight": 24,
        "padding": 8,
        "width": "100%",
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "400",
          "marginHorizontal": 4,
          "marginVertical": 3,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    Error message
  </Text>
</View>
`;
